# devkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/apipad/: package.json
apps/apipad/src-tauri/: Cargo.toml  tauri.conf.json
apps/apipad/src-tauri/capabilities/: default.json
apps/apipad/src-tauri/src/: lib.rs  main.rs
apps/apipad/src/app/: globals.css  layout.tsx  page.tsx
apps/apipad/src/components/: AuthEditor.tsx  BodyEditor.tsx  CollectionTree.tsx  EnvironmentSelector.tsx  Header.tsx  HeadersEditor.tsx  ImportModal.tsx  KeyValueEditor.tsx  ParamsEditor.tsx  RequestPanel.tsx  RequestTabs.tsx  ResponseBody.tsx  ResponseHeaders.tsx  ResponseMeta.tsx  ResponsePanel.tsx  Sidebar.tsx  Toast.tsx  UrlBar.tsx
apps/apipad/src/hooks/: useCollections.ts  useEnvironments.ts  useRequestExecutor.ts  useRequestHistory.ts  useStorage.ts  useToast.ts
apps/apipad/src/lib/: http.ts  import-insomnia.ts  import-postman.ts  interpolation.ts  json-highlight.ts  storage.ts  utils.ts
apps/apipad/src/types/: index.ts
apps/devdash/: package.json
apps/devdash/src-tauri/: Cargo.toml  tauri.conf.json
apps/devdash/src-tauri/capabilities/: default.json
apps/devdash/src-tauri/src/: lib.rs  main.rs
apps/devdash/src/app/: globals.css  layout.tsx  page.tsx
apps/devdash/src/components/: DockerPanel.tsx  EmptyState.tsx  Header.tsx  MongoPanel.tsx  NodePanel.tsx  PostgresPanel.tsx  RedisPanel.tsx  Sidebar.tsx  SystemPanel.tsx
apps/devdash/src/hooks/: useServices.ts
apps/devdash/src/lib/: tauri-bridge.ts
apps/devdash/src/types/: index.ts
apps/devkit/: package.json
apps/devkit/src-tauri/: Cargo.toml  tauri.conf.json
apps/devkit/src-tauri/capabilities/: default.json
apps/devkit/src-tauri/src/: apipad.rs  devdash.rs  envguard.rs  lib.rs  loglens.rs  main.rs  portman.rs
apps/devkit/src/app/: globals.css  layout.tsx  page.tsx
apps/devkit/src/components/: AppSidebar.tsx  DevKitShell.tsx  ErrorBoundary.tsx
apps/devkit/src/hooks/: usePorts.ts  useToast.ts
apps/devkit/src/lib/: tauri.ts
apps/devkit/src/types/: file-system.d.ts  loglens.ts
apps/envguard/: package.json  pnpm-lock.yaml
apps/envguard/src-tauri/: Cargo.toml  tauri.conf.json
apps/envguard/src-tauri/capabilities/: default.json
apps/envguard/src-tauri/src/: lib.rs  main.rs
apps/envguard/src/app/: globals.css  layout.tsx  page.tsx
apps/envguard/src/lib/: crypto.ts  (+3 more)
apps/loglens/: package.json
apps/loglens/src-tauri/: Cargo.toml  tauri.conf.json
apps/loglens/src-tauri/capabilities/: default.json
apps/loglens/src-tauri/src/: lib.rs  main.rs
apps/portman/: README.md  index.html  package.json
apps/portman/src/: App.css  App.tsx  types.ts
apps/portman/src-tauri/: tauri.conf.json
(+114 files in other folders)
