[package]
name = "devdash"
version = "0.1.0"
edition = "2021"
description = "DevDash — Developer Services Dashboard"

[lib]
name = "devdash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
sysinfo = "0.33"
