[package]
name = "envguard"
version = "0.1.0"
edition = "2021"
description = "EnvGuard — .env File Manager"

[lib]
name = "envguard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
tauri-plugin-dialog = "2"
