[package]
name = "loglens"
version = "0.1.0"
edition = "2021"
description = "LogLens — Log File Viewer"

[lib]
name = "loglens_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tauri-plugin-dialog = "2"
